--- a/app/src/main/res/layout/fragment_emotion_recognition.xml
+++ b/app/src/main/res/layout/fragment_emotion_recognition.xml
@@ -2,9 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:text="这里是情绪识别"
+    <com.joanzapata.iconify.widget.IconTextView
         android:layout_width="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/camera_face_detection_origin" />
+
+    <cn.edu.uestc.android_10.view.RosImageView
+        android:id="@+id/camera_face_detection_origin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
+        android:padding="20dp" />
+
+    <com.joanzapata.iconify.widget.IconTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/camera_expression_recognition_handled" />
+
+    <cn.edu.uestc.android_10.view.RosImageView
+        android:id="@+id/camera_expression_recognition_handled"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:padding="20dp" />
 </LinearLayout>
