修改依赖问题，新增姿态估计

--- a/app/src/main/res/menu/menu_robot_controller.xml
+++ b/app/src/main/res/menu/menu_robot_controller.xml
@@ -22,6 +22,11 @@
         android:showAsAction="withText|ifRoom"
         android:title="@string/action_voice"
         tools:ignore="AppCompatResource" />
+    <item
+        android:id="@+id/action_pose"
+        android:showAsAction="withText|ifRoom"
+        android:title="@string/action_pose"
+        tools:ignore="AppCompatResource" />
     <item android:title="@string/action_face">
         <menu>
             <item
