--- a/app/src/main/res/layout/fragment_map_build.xml
+++ b/app/src/main/res/layout/fragment_map_build.xml
@@ -7,6 +7,7 @@
         android:id="@+id/cameraview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:layout_marginTop="10dp"
         android:layout_weight="1" />
     <cn.edu.uestc.cssl.view.JoyStickView
