--- a/app/src/main/res/layout/fragment_object_tracking.xml
+++ b/app/src/main/res/layout/fragment_object_tracking.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    android:id="@+id/button_parent"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,15 +21,21 @@
             android:padding="20dp"
             android:layout_marginTop="10dp" />
     </LinearLayout>
-
-    <LinearLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scrollbars="vertical"
+        android:fadingEdge="vertical">
+       <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
+        android:gravity="center_horizontal"
         android:id="@+id/objectInfoContainer">
 
-    </LinearLayout>
+       </LinearLayout>
 
+    </ScrollView>
 
 </LinearLayout>
