--- a/app/src/main/res/layout/fragment_voice_recognition.xml
+++ b/app/src/main/res/layout/fragment_voice_recognition.xml
@@ -1,10 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:voiceView="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
     <TextView
-        android:text="这里是语音识别"
+        android:id="@+id/textView"
+        android:layout_width="240dp"
+        android:layout_height="23dp"
+        android:text="语音识别的内容"
+        app:layout_constraintBottom_toTopOf="@+id/voicLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.64" />
+
+    <com.carlos.voiceline.mylibrary.VoiceLineView
+        android:id="@+id/voicLine"
         android:layout_width="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content" />
+        android:layout_height="493dp"
+
+        android:background="@android:color/white"
+        voiceView:fineness="three"
+        voiceView:maxVolume="200"
+        voiceView:middleLine="@android:color/holo_red_light"
+        voiceView:middleLineHeight="1dp"
+        voiceView:rectSpace="2dp"
+        voiceView:rectWidth="5dp"
+        voiceView:sensibility="four"
+        voiceView:viewMode="line"
+        voiceView:voiceLine="@android:color/holo_red_light" />
+
+    <Button
+        android:id="@+id/RecordAudio_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="开始录制" />
+
+
+
 </LinearLayout>
