--- a/app/src/main/res/layout/fragment_object_tracking.xml
+++ b/app/src/main/res/layout/fragment_object_tracking.xml
@@ -7,7 +7,6 @@
     android:gravity="center_horizontal"
     android:id="@+id/button_parent"
     >
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,23 +17,24 @@
             android:id="@+id/camera_object_tracking_handled"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
+            android:padding="10dp"
             android:layout_marginTop="10dp" />
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:scrollbars="vertical"
-        android:fadingEdge="vertical">
-       <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:id="@+id/objectInfoContainer">
+        android:scrollbars="vertical"
+        android:fadingEdge="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-       </LinearLayout>
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:id="@+id/objectInfoContainer">
+
+        </LinearLayout>
 
     </ScrollView>
 
