--- a/app/src/main/res/layout/fragment_voice_recognition.xml
+++ b/app/src/main/res/layout/fragment_voice_recognition.xml
@@ -4,18 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:voiceView="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="240dp"
-        android:layout_height="23dp"
-        android:text="语音识别的内容"
-        app:layout_constraintBottom_toTopOf="@+id/voicLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.64" />
-
     <com.carlos.voiceline.mylibrary.VoiceLineView
         android:id="@+id/voicLine"
         android:layout_width="match_parent"
@@ -37,6 +25,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="开始录制" />
+    <TextView
+        android:textColor="@color/black"
+        android:id="@+id/recognition_result"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="语音识别的内容"
+        android:textSize="20dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/voicLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.64" />
 
 
 
